Closed Bug 918185 Opened 11 years ago Closed 11 years ago

Range.getClientRects/getBoundingClientRect fails on text nodes whose textframes were optimized away

Categories

(Core :: Layout, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

nsCSSFrameConstructor optimizes away text frames for text nodes containing only trimmable whitespace adjacent to a block boundary. Range.getClientRects/getBoundingClientRect can return incorrect results for those nodes.
Attached patch fixSplinter Review
Attachment #807047 - Flags: review?(bzbarsky)
Comment on attachment 807047 [details] [diff] [review]
fix

r=me
Attachment #807047 - Flags: review?(bzbarsky) → review+
https://hg.mozilla.org/mozilla-central/rev/5294bf1a2140
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Blocks: 864595
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: